@@ -1,0 +1,4 @@
+/* { dg-do run } */
+
+/* { dg-command {0t} } */
+/* { dg-output "0T" } */
