@@ -1,0 +1,4 @@
+/* { dg-do run } */
+
+/* { dg-command {1t} } */
+/* { dg-output "1T" } */
