@@ -1,3 +1,13 @@
+2023-09-18  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-lex.l: Accept t and T suffix for uint<1> values.
+	* libpoke/pkl-rt.pk: Adapt values printer accordingly.
+	* testsuite/poke.pkl/integers-13.pk: New test.
+	* testsuite/poke.pkl/integers-14.pk: Likewise.
+	* testsuite/poke.pkl/integers-15.pk: Likewise.
+	* testsuite/poke.pkl/integers-16.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
+
 2023-09-17  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* poke/pk-diff.pk: Refer to default values of configuration
